# Table-Games

./: .gitignore  README.md
.github/workflows/: odds.yml  test.yml
python/: pyproject.toml
python/src/table_games/blackjack/: __init__.py  basic.py  blackjack.py  counting.py
python/src/table_games/common/: cards.py
python/src/table_games/utils/: __init__.py  broker.py  policy_monitor.py
python/tests/: basic_test.py  totals_test.py
rust/: Cargo.toml
rust/table-games/: Cargo.toml
rust/table-games/src/: lib.rs  main.rs
rust/table-games/src/blackjack/: mod.rs
rust/table-games/src/blackjack/base/: mod.rs  player.rs  spot.rs
rust/table-games/src/blackjack/policies/: basic.rs  counting.rs  mod.rs  player.rs  spot.rs
rust/table-games/src/blackjack/states/: action.rs  betting.rs  cleanup.rs  dealing.rs  mod.rs  prebetting.rs  results.rs
rust/table-games/src/common/: cards.rs  mod.rs
rust/table-games/src/utils/: broker.rs  hand.rs  mod.rs  parallel.rs
