[package]
name = "table-games"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
histo = "1.0.0"
lazy_static = "1.4.0"
ndarray = "0.15.6"
once_cell = "1.17.1"
rand = "0.8.5"
strum = "0.24"
strum_macros = "0.24"
